--- a/src/main/resources/messages_ro.properties
+++ b/src/main/resources/messages_ro.properties
@@ -7,7 +7,7 @@ founders.title = Fondatori
 founders.description = Am creat Fraxen pentru c\u0103 \u0219tim c\u0103 succesul apare atunci c\u00E2nd oamenii potrivi\u021Bi se \u00EEnt\u00E2lnesc la momentul potrivit. Facilit\u0103m conexiunea \u0219i colaborarea \u00EEntre antreprenori \u0219i executivi cu experien\u021B\u0103, pentru a accelera cre\u0219terea afacerilor cu o abordare uman\u0103 \u0219i un spirit al reu\u0219itei \u00EEmp\u0103r\u021Bit.
 
 purpose.title = Misiunea Noastr\u0103
-purpose.description = Conect\u0103m antreprenorii vizionari cu executivi frac\u021Bionali de elitu\u0103, cre\u00E2nd o comunitate puternic\u0103, pentru a stimula cre\u0219terea, a optimiza performan\u021Ba \u0219i a conduce cu integritate \u0219i umanitate.
+purpose.description = Conect\u0103m antreprenorii vizionari cu executivi frac\u021Bionali de elit\u0103, cre\u00E2nd o comunitate puternic\u0103, pentru a stimula cre\u0219terea, a optimiza performan\u021Ba \u0219i a conduce cu integritate \u0219i umanitate.
 
 fractional.title = Descoperind universul executivilor Frac\u021Bionali
 fractional.q1.title = Ce este un Executiv Frac\u021Bional?
@@ -25,7 +25,7 @@ why.executives.title = Ca Executiv Frac\u021Bional
 why.executives.p1 = Oportunit\u0103\u021Bi Flexibile: Roluri de impact frac\u021Bionale, proiect sau interim, cu libertate complet\u0103 asupra programului t\u0103u.
 why.executives.p2 = Valorific\u0103-\u021Bi Expertiza: Aplic\u0103 experienta ta de peste 15 ani pentru a transforma organiza\u021Bii sau genera cre\u0219tere.
 why.executives.p3 = Compensa\u021Bie Transparent\u0103 \u0219i Corect\u0103: Remunera\u021Bie aliniat\u0103 pie\u021Bei \u0219i propor\u021Bional\u0103 cu impactul t\u0103u.
-why.executives.p4 = Re\u021Bea Profesional\u0103: Conecteaz\u0103-te \u0219i colaboreaz\u0103 cu al\u021Bi executivi frac\u021Bionali de elit\u0103, extinz\u00E2ndu-\u0219i influen\u021Ba profesional\u0103 \u0219i comunitatea.
+why.executives.p4 = Re\u021Bea Profesional\u0103: Conecteaz\u0103-te \u0219i colaboreaz\u0103 cu al\u021Bi executivi frac\u021Bionali de elit\u0103, extinz\u00E2ndu-\u021Bi influen\u021Ba profesional\u0103 \u0219i comunitatea.
 
 why.entrepreneurs.title = Ca Antreprenor
 why.entrepreneurs.p1 = Oferim antreprenorilor vizionari acces la directori frac\u021Bionali de top, la momentul potrivit, acceler\u00E2nd cre\u0219terea \u0219i optimiz\u00E2nd opera\u021Biunile.
