changes to language

--- a/src/main/resources/messages_ro.properties
+++ b/src/main/resources/messages_ro.properties
@@ -1,4 +1,5 @@
-title.fraxen = Fraxen - Solut\u021Bii Frac\u021Bionale pentru Cre\u0219tere Rapid\u0103
+title.fraxen = Fraxen - Solu\u021Bii Frac\u021Bionale
+#  pentru Cre\u0219tere Rapid\u0103
 hero.title = Fraxen
 hero.subtitle = Competen\u021B\u0103 Executiv\u0103, La Cerere
 button.learnmore = Afl\u0103 mai mult
